Vibe Roleplay v1.0 + Plugin KeyListener

--- a/server.cfg
+++ b/server.cfg
@@ -7,7 +7,7 @@ port 7777
 hostname Vibe Roleplay
 gamemode0 gamemode
 filterscripts
-plugins crashdetect mysql streamer sscanf pawncmd samp_bcrypt pawnregex sampvoice nativechecker profiler
+plugins crashdetect mysql streamer sscanf pawncmd samp_bcrypt pawnregex sampvoice nativechecker profiler KeyListener
 announce 1
 query 1
 chatlogging 0
