Vibe Roleplay v1.1 [+] Account sistem dengan bcrypt [+] Database & player management system [+] UI system (HUD, dialog, textdraw) [+] Chat RP standar dengan proximity system [+] Anti-cheat & spawning system [+] Utility modules & infrastructure

--- a/server.cfg
+++ b/server.cfg
@@ -7,7 +7,7 @@ port 7777
 hostname Vibe Roleplay
 gamemode0 gamemode
 filterscripts
-plugins crashdetect mysql streamer sscanf pawncmd samp_bcrypt pawnregex sampvoice nativechecker profiler KeyListener
+plugins crashdetect mysql streamer sscanf pawncmd samp_bcrypt pawnregex sampvoice nativechecker profiler KeyListener textdraw-streamer
 announce 1
 query 1
 chatlogging 0
@@ -23,5 +23,6 @@ lagcompmode 1
 conncookies 1
 messageholelimit 5000
 maxnpc 0
+crashdetect_log crashdetect.log
 logtimeformat [%H:%M:%S]
 language Indonesia/English
