--- a/server.cfg
+++ b/server.cfg
@@ -1,12 +1,12 @@
 echo Executing Server Config...
 
 lanmode 0
-rcon_password vrp
-maxplayers 150
+rcon_password vrp12345
+maxplayers 100
 port 7777
-hostname Vibe Roleplay
+hostname Vibe Roleplay | Indonesia
 gamemode0 gamemode
-filterscripts
+filterscripts voice_manager
 plugins crashdetect mysql streamer sscanf pawncmd samp_bcrypt pawnregex sampvoice nativechecker profiler KeyListener textdraw-streamer
 announce 1
 query 1
